--- a/src/main/webapp/inward/pharmacy_search_return_bill_bht.xhtml
+++ b/src/main/webapp/inward/pharmacy_search_return_bill_bht.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:h="http://java.sun.com/jsf/html" 
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
@@ -11,94 +11,103 @@
             <ui:define name="content">
                 <h:form>
                     <p:panel header="Search Purchase Orders" >
-                        <f:facet name="header" >                            
-                            <h:outputLabel value="SEARCH RETURN BILL"/>     
+                        <f:facet name="header" >   
+                            <h:outputLabel value="Search Return Bill"/>  
+                        </f:facet>
+                        <h:panelGroup class="d-flex gap-2">
+                            <h:panelGrid class="col-1 mx-1">
+                                <h:panelGrid columns="1" class="mt-1">
+                                    <h:outputLabel value="From Date"/>
+                                    <p:calendar 
+                                        styleClass="dateTimePicker" 
+                                        id="fromDate" 
+                                        value="#{searchController.fromDate}" 
+                                        navigator="false" 
+                                        pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >      
+                                    </p:calendar>
+                                    <h:outputLabel value="To Date"/>
+                                    <p:calendar 
+                                        id="toDate" 
+                                        value="#{searchController.toDate}" 
+                                        navigator="false" 
+                                        pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >                                                                              
+                                    </p:calendar>
+                                    <p:commandButton 
+                                        id="btnSearch" 
+                                        ajax="false" 
+                                        value="Search" 
+                                        class="mt-2  w-100"
+                                        action="#{searchController.createReturnBhtBills}"  />
+                                </h:panelGrid>
 
-                            <h:panelGrid columns="5" >
-                                <h:outputLabel value="From Date"/>
-                                <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >      
-                                </p:calendar>
-                                <h:outputLabel value="To Date"/>
-                                <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >                                                                              
-                                </p:calendar>
-                                <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.createReturnBhtBills}"  />
-                                <p:spacer height="30"/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/>
-
-                                <h:outputLabel value="Sale Bill No"/>   
-                                <h:outputLabel value="Return Bill No"/> 
-                                <h:outputLabel value="Bht No"/>
-                                <h:outputLabel value="Patient Name"/>  
-                                <h:outputLabel value="Net Total"/>
-                             
-                                <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.refBillNo}" />   
-                                <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.billNo}" />
-                                <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.bhtNo}" />
-                                <p:inputText autocomplete="off" value="#{searchController.searchKeyword.patientName}" />
-                                <p:inputText autocomplete="off" value="#{searchController.searchKeyword.netTotal}"/>                               
-                                
+                                <h:panelGrid columns="1" class="mt-2">
+                                    <h:outputLabel value="Sale Bill No"/>   
+                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.refBillNo}" />  
+                                    <h:outputLabel value="Return Bill No"/> 
+                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.billNo}" />
+                                    <h:outputLabel value="Bht No"/>
+                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.bhtNo}" />
+                                    <h:outputLabel value="Patient Name"/>  
+                                    <p:inputText autocomplete="off" value="#{searchController.searchKeyword.patientName}" />
+                                    <h:outputLabel value="Net Total"/>
+                                    <p:inputText autocomplete="off" value="#{searchController.searchKeyword.netTotal}"/> 
+                                </h:panelGrid>
                             </h:panelGrid>
 
-                        </f:facet>
+                            <p:panel>
+                                <p:dataTable id="tblBills" value="#{searchController.bills}" var="bill"  >
+                                    <p:column headerText="Sale Bill No" >                              
+                                        <h:outputLabel value="#{bill.billedBill.deptId}" ></h:outputLabel>
+                                    </p:column>  
+
+                                    <p:column headerText="Return Bill No"  >                              
+                                        <h:outputLabel value="#{bill.deptId}" ></h:outputLabel>
+                                    </p:column>  
+
+                                    <p:column headerText="BHT No" >                                
+                                        <h:outputLabel  value="#{bill.patientEncounter.bhtNo}"  />
+                                    </p:column>
+
+                                    <p:column headerText="Patient Name" >                                
+                                        <h:outputLabel  value="#{bill.patientEncounter.patient.person.name}"  />
+                                    </p:column>
 
 
-                        <p:dataTable id="tblBills" value="#{searchController.bills}" var="bill"  >
-                            <p:column headerText="Sale Bill No" >                              
-                                <h:outputLabel value="#{bill.billedBill.deptId}" ></h:outputLabel>
-                            </p:column>  
-
-                            <p:column headerText="Return Bill No"  >                              
-                                <h:outputLabel value="#{bill.deptId}" ></h:outputLabel>
-                            </p:column>  
-
-                            <p:column headerText="BHT No" >                                
-                                <h:outputLabel  value="#{bill.patientEncounter.bhtNo}"  />
-                            </p:column>
-
-                            <p:column headerText="Patient Name" >                                
-                                <h:outputLabel  value="#{bill.patientEncounter.patient.person.name}"  />
-                            </p:column>
-
-
-                            <p:column headerText="Item Return at"  >                               
-                                <h:outputLabel value="#{bill.createdAt}" >
-                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                </h:outputLabel>                                   
-                                <br/>
-                                <h:panelGroup rendered="#{bill.cancelled}" >
-                                    <h:outputLabel style="color: red;" value="Cancelled at " />
-                                    <h:outputLabel style="color: red;" rendered="#{bill.cancelled}" 
-                                                   value="#{bill.cancelledBill.createdAt}" >
-                                        <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                    </h:outputLabel>
-                                </h:panelGroup>                             
-                            </p:column>                 
-                            <p:column headerText="Item Return by" >                               
-                                <h:outputLabel value="#{bill.creater.webUserPerson.name}" >                                      
-                                </h:outputLabel>                                
-                                <br/>
-                                <h:panelGroup rendered="#{bill.cancelled}" >
-                                    <h:outputLabel style="color: red;" value="Cancelled By " />
-                                    <h:outputLabel style="color: red;" rendered="#{bill.cancelled}" value="#{bill.cancelledBill.creater.webUserPerson.name}" >                                       
-                                    </h:outputLabel>
-                                </h:panelGroup>                             
-                            </p:column>        
-                            <p:column>
-                                <p:commandButton ajax="false" disabled="#{bill.checkActiveReturnCashBill() or bill.cancelled}" 
-                                                 value="View Bill" action="pharmacy_reprint_bill_return_bht"  >
-                                    <f:setPropertyActionListener value="#{bill}" target="#{pharmacyBillSearch.bill}"/>
-                                </p:commandButton>                                
-                            </p:column>
-
-                        </p:dataTable>
-
-
+                                    <p:column headerText="Item Return at"  >                               
+                                        <h:outputLabel value="#{bill.createdAt}" >
+                                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                        </h:outputLabel>                                   
+                                        <br/>
+                                        <h:panelGroup rendered="#{bill.cancelled}" >
+                                            <h:outputLabel style="color: red;" value="Cancelled at " />
+                                            <h:outputLabel style="color: red;" rendered="#{bill.cancelled}" 
+                                                           value="#{bill.cancelledBill.createdAt}" >
+                                                <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                            </h:outputLabel>
+                                        </h:panelGroup>                             
+                                    </p:column>                 
+                                    <p:column headerText="Item Return by" >                               
+                                        <h:outputLabel value="#{bill.creater.webUserPerson.name}" >                                      
+                                        </h:outputLabel>                                
+                                        <br/>
+                                        <h:panelGroup rendered="#{bill.cancelled}" >
+                                            <h:outputLabel style="color: red;" value="Cancelled By " />
+                                            <h:outputLabel style="color: red;" rendered="#{bill.cancelled}" value="#{bill.cancelledBill.creater.webUserPerson.name}" >                                       
+                                            </h:outputLabel>
+                                        </h:panelGroup>                             
+                                    </p:column>        
+                                    <p:column>
+                                        <p:commandButton ajax="false" disabled="#{bill.checkActiveReturnCashBill() or bill.cancelled}" 
+                                                         value="View Bill" action="pharmacy_reprint_bill_return_bht"  >
+                                            <f:setPropertyActionListener value="#{bill}" target="#{pharmacyBillSearch.bill}"/>
+                                        </p:commandButton>                                
+                                    </p:column>
+                                </p:dataTable>
+                            </p:panel>
+                        </h:panelGroup>
                     </p:panel>
-
                 </h:form>
             </ui:define>
-
-
         </ui:composition>
-
     </h:body>
 </html>
