--- a/src/main/webapp/inward/pharmacy_search_sale_bill_item_bht.xhtml
+++ b/src/main/webapp/inward/pharmacy_search_sale_bill_item_bht.xhtml
@@ -11,122 +11,134 @@
             <ui:define name="content">
                 <h:form>
                     <p:panel>
-                        <f:facet name="header" >
-                            <h:outputLabel value="SEARCH PHARMACY BILL ITEM "/>                                                          
-                            <h:panelGrid columns="6" >
-                                <h:outputLabel value="From Date"/>
-                                <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >      
-                                </p:calendar>
-                                <h:outputLabel value="To Date"/>
-                                <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >                                                                              
-                                </p:calendar>
-                                <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.createPharmacyBillItemTableBht()}"  />
-                                <p:spacer height="30"/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/>
-
-                                <h:outputLabel value="Bill No"/>
-                                <h:outputLabel value="BHT No"/>
-                                <h:outputLabel value="Item Name"/>    
-                                <h:outputLabel value="Item Value"/>   
-                                <h:outputLabel value="Patient"/>           
-                                <h:outputLabel  value="Item Code"/>
-                                <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.billNo}" />
-                                <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.bhtNo}" />
-                                <p:inputText autocomplete="off" value="#{searchController.searchKeyword.itemName}" />
-                                <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.total}" />
-                                <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.patientName}" />
-                                <p:inputText autocomplete="off" value="#{searchController.searchKeyword.code}"/>
-                            </h:panelGrid>
+                        <f:facet name="header" >                          
+                            <h:outputLabel value="Search Pharmacy Bill Item"/>
                         </f:facet>
+                        <h:panelGroup class="d-flex gap-2">
+                            <h:panelGrid class="col-1 mx-1">
+                                <h:panelGrid columns="1" class="mt-1">
+                                    <h:outputLabel value="From Date"/>
+                                    <p:calendar 
+                                        styleClass="dateTimePicker" 
+                                        id="fromDate" 
+                                        value="#{searchController.fromDate}"
+                                        navigator="false" 
+                                        pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >      
+                                    </p:calendar>
+                                    <h:outputLabel value="To Date"/> 
+                                    <p:calendar 
+                                        id="toDate" 
+                                        value="#{searchController.toDate}" 
+                                        navigator="false" 
+                                        pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >                                                                              
+                                    </p:calendar>
+                                    <p:commandButton 
+                                        id="btnSearch" 
+                                        ajax="false"
+                                        class="mt-2  w-100"
+                                        value="Search" 
+                                        action="#{searchController.createPharmacyBillItemTableBht()}"  />
+                                </h:panelGrid>
 
+                                <h:panelGrid columns="1" class="mt-2">
+                                    <h:outputLabel value="Bill No"/>
+                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.billNo}" />
+                                    <h:outputLabel value="BHT No"/>
+                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.bhtNo}" />
+                                    <h:outputLabel value="Item Name"/>    
+                                    <p:inputText autocomplete="off" value="#{searchController.searchKeyword.itemName}" />
+                                    <h:outputLabel value="Item Value"/>
+                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.total}" />
+                                    <h:outputLabel value="Patient"/>     
+                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.patientName}" />
+                                    <h:outputLabel  value="Item Code"/>
+                                    <p:inputText autocomplete="off" value="#{searchController.searchKeyword.code}"/>
+                                </h:panelGrid>
+                            </h:panelGrid>
 
+                            <p:panel >
+                                <p:dataTable 
+                                    rowIndexVar="i" 
+                                    id="tblBills" 
+                                    value="#{searchController.billItems}" 
+                                    var="pi" 
+                                    paginator="true"
+                                    paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                    rowsPerPageTemplate="5,10,15"
+                                    >
+                                    <p:column headerText="No" styleClass="alignTop">
+                                        <h:outputLabel value="#{i+1}"/>
+                                    </p:column>
+                                    <p:column headerText="View">
+                                        <p:commandButton ajax="false" value="View Bill"
+                                                         action="pharmacy_reprint_bill_sale"  >
+                                            <f:setPropertyActionListener value="#{pi.bill.referenceBill}"
+                                                                         target="#{pharmacyBillSearch.bill}"/>                                     
+                                        </p:commandButton>
+                                    </p:column>
+                                    <p:column headerText="Bill No" styleClass="alignTop"  >
+                                        <h:outputLabel value="#{pi.bill.deptId}"/>
+                                    </p:column>
+                                    <p:column headerText="BHT No" styleClass="alignTop"  >
+                                        <h:outputLabel value="#{pi.bill.patientEncounter.bhtNo}"/>
+                                    </p:column>
+                                    <p:column headerText="Item Name"  styleClass="alignTop" >
+                                        <h:outputLabel value="#{pi.item.name}" />    
+                                    </p:column>
 
+                                    <p:column headerText="Item Code">
+                                        <f:facet name="header">
+                                            <h:outputLabel value="Code"/>
+                                        </f:facet>
+                                        <h:outputLabel value="#{pi.item.code}"
+                                                       style="width: 100px!important;" ></h:outputLabel>
+                                    </p:column>
 
-                        <p:dataTable 
-                            rowIndexVar="i" 
-                            id="tblBills" 
-                            value="#{searchController.billItems}" 
-                            var="pi" 
-                            paginator="true"
-                            paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                            rowsPerPageTemplate="5,10,15"
-                            >
-                            <p:column headerText="No" styleClass="alignTop">
-                                <h:outputLabel value="#{i+1}"/>
-                            </p:column>
-                            <p:column headerText="View">
-                                <p:commandButton ajax="false" value="View Bill"
-                                                action="pharmacy_reprint_bill_sale"  >
-                                    <f:setPropertyActionListener value="#{pi.bill.referenceBill}"
-                                                                 target="#{pharmacyBillSearch.bill}"/>                                     
-                                </p:commandButton>
-                            </p:column>
-                            <p:column headerText="Bill No" styleClass="alignTop"  >
-                                <h:outputLabel value="#{pi.bill.deptId}"/>
-                            </p:column>
-                             <p:column headerText="BHT No" styleClass="alignTop"  >
-                                 <h:outputLabel value="#{pi.bill.patientEncounter.bhtNo}"/>
-                            </p:column>
-                            <p:column headerText="Item Name"  styleClass="alignTop" >
-                                <h:outputLabel value="#{pi.item.name}" />    
-                            </p:column>
+                                    <p:column headerText="Billed At"  >
+                                        <h:outputLabel value="Billed at " />
+                                        <h:outputLabel value="#{pi.bill.createdAt}" >
+                                            <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                        </h:outputLabel>
+                                        <br/>
+                                        <h:panelGroup rendered="#{pi.bill.referenceBill.cancelled}" >
+                                            <h:outputLabel style="color: red;" value="Cancelled at " />
+                                            <h:outputLabel style="color: red;" 
+                                                           rendered="#{pi.bill.referenceBill.cancelled}" 
+                                                           value="#{pi.bill.referenceBill.cancelledBill.createdAt}" >
+                                                <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                            </h:outputLabel>
+                                        </h:panelGroup>
+                                        <h:panelGroup rendered="#{pi.bill.referenceBill.refunded}" >
+                                            <h:outputLabel style="color: red;" value="Refunded at " />
+                                            <h:outputLabel style="color: red;" 
+                                                           rendered="#{pi.bill.referenceBill.refunded}" 
+                                                           value="#{pi.referanceBillItem.bill.createdAt}" >
+                                                <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                            </h:outputLabel>
+                                        </h:panelGroup>
+                                    </p:column>     
+                                    <p:column headerText="Qty" >
+                                        <h:outputLabel value="#{pi.qty}" >
+                                            <f:convertNumber pattern="#0.00"/>
+                                        </h:outputLabel>
+                                    </p:column>   
 
-                            <p:column headerText="Item Code">
-                                <f:facet name="header">
-                                    <h:outputLabel value="Code"/>
-                                </f:facet>
-                                <h:outputLabel value="#{pi.item.code}"
-                                               style="width: 100px!important;" ></h:outputLabel>
-                            </p:column>
+                                    <p:column headerText="Bill item Value">
+                                        <h:outputLabel value="#{pi.netValue}" >
+                                            <f:convertNumber pattern="#,##0.00"/>
+                                        </h:outputLabel>
+                                    </p:column>
 
-                            <p:column headerText="Billed At"  >
-                                <h:outputLabel value="Billed at " />
-                                <h:outputLabel value="#{pi.bill.createdAt}" >
-                                    <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                </h:outputLabel>
-                                <br/>
-                                <h:panelGroup rendered="#{pi.bill.referenceBill.cancelled}" >
-                                    <h:outputLabel style="color: red;" value="Cancelled at " />
-                                    <h:outputLabel style="color: red;" 
-                                                   rendered="#{pi.bill.referenceBill.cancelled}" 
-                                                   value="#{pi.bill.referenceBill.cancelledBill.createdAt}" >
-                                        <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                    </h:outputLabel>
-                                </h:panelGroup>
-                                <h:panelGroup rendered="#{pi.bill.referenceBill.refunded}" >
-                                    <h:outputLabel style="color: red;" value="Refunded at " />
-                                    <h:outputLabel style="color: red;" 
-                                                   rendered="#{pi.bill.referenceBill.refunded}" 
-                                                   value="#{pi.referanceBillItem.bill.createdAt}" >
-                                        <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                    </h:outputLabel>
-                                </h:panelGroup>
-                            </p:column>     
-                            <p:column headerText="Qty" >
-                                <h:outputLabel value="#{pi.qty}" >
-                                    <f:convertNumber pattern="#0.00"/>
-                                </h:outputLabel>
-                            </p:column>   
-
-                            <p:column headerText="Bill item Value">
-                                <h:outputLabel value="#{pi.netValue}" >
-                                    <f:convertNumber pattern="#,##0.00"/>
-                                </h:outputLabel>
-                            </p:column>
-
-                            <p:column headerText="Patient"  styleClass="alignTop" >
-                                <h:outputLabel value="#{pi.bill.patient.person.nameWithTitle}" >
-                                </h:outputLabel>                             
-                            </p:column>
-
-                        </p:dataTable>
-
+                                    <p:column headerText="Patient"  styleClass="alignTop" >
+                                        <h:outputLabel value="#{pi.bill.patient.person.nameWithTitle}" >
+                                        </h:outputLabel>                             
+                                    </p:column>
+                                </p:dataTable>
+                            </p:panel>
+                        </h:panelGroup>
                     </p:panel>
-
                 </h:form>
             </ui:define>
-
-
         </ui:composition>
-
     </h:body>
 </html>
